add qq white list

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@h4m5ter/koishi-plugin-youtube",
+  "name": "koishi-plugin-youtube-vincentzyu-fork",
   "description": "youtube plugin for koishi",
   "author": {
     "name": "TEDIORELEE",
